Tiny fix for generated data file
Also added javadoc to various classes